swipeview with viewpager added

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,5 @@ include ':menudrawer'
 include ':webview'
 include ':bottomnavigation'
 include ':recyclerview'
+include ':ratingbar'
+include ':swipeview'
